--- a/public/loginSignup/login.html
+++ b/public/loginSignup/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login.css">
-    <script src="loginResponsive.js" defer></script>
+    <script src="loginSignup.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" defer></script>
     <title>ChatterBox</title>
 </head>
@@ -19,6 +19,7 @@
                 <span>or use your email for registration</span>
                 <input type="text" name="name" placeholder="Name" required/>
                 <input type="email" name="email" placeholder="Email" required/>
+                <input type="tel" name="phoneNumber" placeholder="PhoneNumber" maxlength="10" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required/>
                 <input type="password" name="password" placeholder="Password" required/>
                 <button>Sign Up</button>
             </form>
