--- a/public/loginSignup/login.html
+++ b/public/loginSignup/login.html
@@ -19,7 +19,7 @@
                 <span>or use your email for registration</span>
                 <input type="text" name="name" placeholder="Name" required/>
                 <input type="email" name="email" placeholder="Email" required/>
-                <input type="tel" name="phoneNumber" placeholder="PhoneNumber" maxlength="10" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required/>
+                <input type="tel" name="phoneNumber" placeholder="PhoneNumber" maxlength="10" pattern="[6-9]{1}[0-9]{9}" required/>
                 <input type="password" name="password" placeholder="Password" required/>
                 <button>Sign Up</button>
             </form>
