--- a/public/loginSignup/login.html
+++ b/public/loginSignup/login.html
@@ -25,12 +25,12 @@
             </form>
         </div>
         <div class="form-container sign-in-container">
-            <form action="#">
+            <form onsubmit="userSignin(event)">
                 <h1>Sign in</h1>
                 <span>or use your account</span>
-                <input type="email" placeholder="Email" required/>
-                <input type="password" placeholder="Password" required/>
-                <a href="#">Forgot your password?</a>
+                <input type="email" name="email" placeholder="Email" required/>
+                <input type="password" name="password" placeholder="Password" required/>
+                <a href="../forgotPassword/forgotPassword.html">Forgot your password?</a>
                 <button>Sign In</button>
             </form>
         </div>
