--- a/public/loginSignup/login.html
+++ b/public/loginSignup/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
-    <script src="loginSignup.js" defer></script>
+    <link rel="stylesheet" href="./login.css">
+    <script src="./loginSignup.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" defer></script>
     <title>ChatterBox</title>
 </head>
