--- a/public/chatApp/homePage.html
+++ b/public/chatApp/homePage.html
@@ -11,12 +11,13 @@
     <title>ChatterBox</title>
     <link rel="stylesheet" href="./homePage.css">
     <script src="./homePage.js" defer></script>
+    <script src="./chat.js" defer></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">ChatterBox</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            <button class="navbar-toggler bg-info" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,46 +32,25 @@
         </div>
     </nav>
     <div class="container">
-        <div class="people-list">
+        <div class="people-list" id="users-list">
             <form class="search-people d-flex p-2" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit"><i class="fa fa-search"></i></button>
             </form>
-            <li class="chat-user active p-1">
+            <li class="chat-user">
+                <img class="rounded-5" src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar"/>
                 <div class="about">
-                    <img class="rounded-5" src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar"/>
-                    <h6 class="m-0 ps-5">Yansh Bhardwaj</h6>
-                    <i class="fa fa-circle online ps-2"></i> online
+                    <h6 class="name m-0 ps-2">Yansh Bhardwaj</h6>
+                    <i class="fa fa-circle online ps-2"> online</i>
                 </div>
-            </li>
-            <li class="chat-user p-1 d-flex">
-                <img class="rounded-5" src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar"/>
-                <div class="about ms-2">
-                    <h6 class="m-0">Yansh Bhardwaj</h6>
-                    <i class="fa fa-circle online"></i> online
-                </div>
-            </li>
-            <li class="chat-user p-1 d-flex">
-                <img class="rounded-5" src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar"/>
-                <div class="about ms-2">
-                    <h6 class="m-0">Yansh Bhardwaj</h6>
-                    <i class="fa fa-circle online"></i> online
-                </div>
-            </li>
-            <li class="chat-user p-1 d-flex">
-                <img class="rounded-5" src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar"/>
-                <div class="about ms-2">
-                    <h6 class="m-0">Yansh Bhardwaj</h6>
-                    <i class="fa fa-circle online"></i> online
-                </div>
-            </li>            
+            </li>           
         </div>
         <div class="chat-card">
             <div class="chat-user d-flex p-1">
                 <img class="rounded-5" src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar"/>
-                <div class="about ms-2">
-                    <div class="name m-0">Yansh Bhardwaj</div>
-                    <i class="fa fa-circle online"></i> online
+                <div class="about">
+                    <h6 class="name m-0 ps-2">Yansh Bhardwaj</h6>
+                    <i class="fa fa-circle online ps-2"> online</i>
                 </div>
             </div>
             <div class="chat-card-msgs">
@@ -83,9 +63,9 @@
 
 
             </div>
-            <form class="msg-form d-flex p-2">
-                <input class="form-control me-2" type="text" placeholder="Type a message" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit"><i class="fa fa-send"></i></button>
+            <form class="msg-form d-flex p-2" onsubmit="sendMsg(event)">
+                <input class="form-control me-2" id="msg-text" name="msg" type="text" placeholder="Type a message" aria-label="Search">
+                <button class="btn btn-outline-success" id="send-msg-btn" type="submit"><i class="fa fa-send"></i></button>
             </form>    
         </div>
     </div>
