--- a/public/chatApp/homePage.html
+++ b/public/chatApp/homePage.html
@@ -61,12 +61,11 @@
         </div>
         <div class="chat-card">
             <div class="chat-card-title d-flex p-1">
-                <img class="rounded-5" src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar"/>
+                <!-- <img class="rounded-5" src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar"/>
                 <div class="about">
                     <h6 class="name m-0 ps-2">Group-A</h6>
-                    <!-- <i class="fa fa-circle online ps-2"> online</i> -->
                 </div>
-                <button class="btn btn-secondary"><i class="fa fa-user-plus"> Add-User</i></button>
+                <button class="btn btn-secondary"><i class="fa fa-user-plus"> Add-User</i></button> -->
             </div>
             <div class="chat-card-msgs" id="chat-msgs-box">
                 
