--- a/public/chatApp/homePage.html
+++ b/public/chatApp/homePage.html
@@ -71,6 +71,7 @@
                 
             </div>
             <form class="msg-form d-flex p-2" id="user-msg-box">
+                <input type="file" id="file">
                 <input class="form-control me-2" id="msg-text" name="msg" type="text" placeholder="Type a message" aria-label="Search">
                 <button class="btn btn-outline-success" id="send-msg-btn" type="submit"><i class="fa fa-send"></i></button>
             </form>    
