--- a/public/chatApp/homePage.html
+++ b/public/chatApp/homePage.html
@@ -13,6 +13,7 @@
     <script src="./homePage.js" defer></script>
     <script src="./chat.js" defer></script>
     <script src="./groups.js" defer></script>
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js" defer></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
